tests/compilefail76.pas
program compilefail76(output, fizzbuz);
{declaring a variable named after a program parameter as a non-File type}

var fizzbuz:integer;  

begin
	fizzbuz := 1;
	writeln(fizzbuz);
end.
